# obs-stream-mcp

./: .gitignore  README.md  SKILL.md  cluster_config.example.json  cluster_config.json  obs-stream-mcp-handoff.md  pyproject.toml
src/obs_stream_mcp/: __init__.py  errors.py  layout_loader.py  obs_controller.py  obs_ui_controller.py  orchestrator.py  schemas.py  server.py  tools.py
src/obs_stream_mcp/coordination/: __init__.py  cluster_manager.py  remote_mcp_client.py
src/obs_stream_mcp/layouts/: default.json
